--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,16 +10,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-    - name: Configure Git
-      run: |
-        git config --global user.name "dalibendhiab10"
-        git config --global user.email "itsdalibendhiab@gmail.com"
+      - name: Configure Git
+        run: |
+          git config --global user.name "dalibendhiab10"
+          git config --global user.email "itsdalibendhiab@gmail.com"
 
-    - name: Add backup remote
-      run: git remote add backup https://github.com/dalibendhiab10/R8-carav-backup.git
+      - name: Add backup remote with authentication
+        run: |
+          git remote add backup https://x-access-token:${{ secrets.BACKUP_REPO_PAT }}@github.com/dalibendhiab10/R8-carav-backup.git
 
-    - name: Push to backup repository
-      run: git push --mirror backup
+      - name: Push to backup repository
+        run: git push --mirror backup
