--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,38 +1,24 @@
 name: Sync to Backup Repository
 
 on:
- push:
-   branches:
-     - main
+  push:
+    branches:
+      - main
 
 jobs:
- sync:
-   runs-on: ubuntu-latest
+  sync:
+    runs-on: ubuntu-latest
 
-   steps:
-     - name: Check out the primary repository
-       uses: actions/checkout@v4
-       with:
-         path: primary-repo
+    steps:
+      - name: Clone Main Repository
+        uses: GuillaumeFalourd/clone-github-repo-action@v2.3
+        with:
+          owner: 'R8-IEEE'
+          repository: 'R8-carav'
+          branch: 'main'
+          access-token: ${{ secrets.BACKUP_REPO_PAT }}
 
-     - name: Check out the backup repository
-       uses: actions/checkout@v4
-       with:
-         repository: dalibendhiab10/R8-carav-backup
-         token: ${{ secrets.BACKUP_REPO_PAT }}
-         path: backup-repo
-
-     - name: Sync repositories
-       run: |
-         rsync -av --delete primary-repo/ backup-repo/
-       env:
-         RSYNC_RSH: 'ssh -o StrictHostKeyChecking=no'
-
-     - name: Commit and push changes
-       run: |
-         cd backup-repo
-         git config --global user.name "dalibendhiab10"
-         git config --global user.email "itsdalibendhiab@gmail.com"
-         git add .
-         git commit -m "Sync from primary repository"
-         git push
+      - name: Sync to Backup Repository
+        run: |
+          git remote set-url origin https://github.com/dalibendhiab10/R8-carav-backup.git
+          git push --mirror
