--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,24 +15,17 @@ jobs:
         with:
           fetch-depth: 0  # Fetch all history for all branches and tags
 
-      - name: Verify BACKUP_REPO_PAT environment variable
-        run: |
-          if [ -z "${{ secrets.BACKUP_REPO_PAT }}" ]; then
-            echo "Error: BACKUP_REPO_PAT is not set."
-            exit 1
-          else
-            echo "BACKUP_REPO_PAT is set."
-          fi
-
       - name: Set up Git configuration
         run: |
-          git config user.name "Your Name"
-          git config user.email "your-email@example.com"
+          git config user.name "dalibendhiab10"
+          git config user.email "itsdalibendhiab@gmail.com"
 
       - name: Add backup repository as remote
         run: |
-          git remote add backup https://username:${{ secrets.BACKUP_REPO_PAT }}@github.com/dalibendhiab10/R8-carav-backup.git
+          git remote add backup https://github.com/dalibendhiab10/R8-carav-backup.git
 
       - name: Push changes to backup repository
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git push --mirror backup
