--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,5 @@
+
+
 name: Sync to Backup Repository
 
 on:
@@ -6,26 +8,22 @@ on:
       - main  # Adjust if your default branch is named differently
 
 jobs:
-  sync:
+    
+  job-public-repo-ubuntu:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Check out the repository
-        uses: actions/checkout@v4
+      
+      - name: Clone GuillaumeFalourd/poc-github-actions PUBLIC repository
+        uses: R8-IEEE/R8-carav@main
         with:
-          fetch-depth: 0  # Fetch all history for all branches and tags
-
-      - name: Set up Git configuration
+          owner: 'dalibendhiab10'
+          repository: 'R8-carav-backup'
+      
+      - name: Access cloned repository content
         run: |
-          git config user.name "dalibendhiab10"
-          git config user.email "itsdalibendhiab@gmail.com"
+          echo "ROOT"
+          ls -la
+          echo "CLONED REPO"
+          cd poc-github-actions
+          ls -la
 
-      - name: Add backup repository as remote
-        run: |
-          git remote add backup https://github.com/dalibendhiab10/R8-carav-backup.git
-
-      - name: Push changes to backup repository
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          git push --mirror backup
