--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,3 @@
-
-
 name: Sync to Backup Repository
 
 on:
@@ -8,22 +6,22 @@ on:
       - main  # Adjust if your default branch is named differently
 
 jobs:
-    
-  job-public-repo-ubuntu:
+  sync:
     runs-on: ubuntu-latest
-    steps:
-      
-      - name: Clone GuillaumeFalourd/poc-github-actions PUBLIC repository
-        uses: R8-IEEE/R8-carav@main
-        with:
-          owner: 'dalibendhiab10'
-          repository: 'R8-carav-backup'
-      
-      - name: Access cloned repository content
-        run: |
-          echo "ROOT"
-          ls -la
-          echo "CLONED REPO"
-          cd poc-github-actions
-          ls -la
 
+    steps:
+      - name: Check out the source repository
+        uses: actions/checkout@v4
+        with:
+          repository: R8-IEEE/R8-carav
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Add backup repository as remote
+        run: |
+          git remote add backup https://github.com/dalibendhiab10/R8-carav-backup.git
+
+      - name: Push to backup repository
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          git push --mirror backup
