--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,27 +3,35 @@ name: Sync to Backup Repository
 on:
   push:
     branches:
-      - main  # Adjust if your default branch is named differently
+      - main  # Ensure this matches your main repository's default branch
 
 jobs:
   sync:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
+      # Step 1: Checkout the main repository (R8-IEEE/R8-carav)
+      - name: Checkout main repository
         uses: actions/checkout@v2
         with:
-          repository: 'R8-IEEE/R8-carav'
-          token: ${{ secrets.BACKUP_REPO_PAT }}
-      - name: Fetch the repository
-        run: |
-          git fetch origin refs/heads/main:refs/remotes/origin/main
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      # Step 2: Set up Git configuration
       - name: Set up Git configuration
         run: |
           git config user.name "dalibendhiab10"
-          git config user.email "itsdalibendhiab10@gmail.com"
+          git config user.email "itsdalibendhiab@gmail.com"
+
+      # Step 3: Add the backup remote including the PAT in the URL
+      - name: Add backup remote with authentication
+        run: |
+          # Remove any existing backup remote (if exists)
+          git remote remove backup || true
+          # Add backup remote with the PAT embedded in the URL
+          git remote add backup https://dalibendhiab10:${{ secrets.BACKUP_REPO_PAT }}@github.com/dalibendhiab10/R8-carav-backup.git
+          echo "Current remotes:"
+          git remote -v
+
+      # Step 4: Push all changes (mirror push) to the backup repository
       - name: Push changes to backup repository
         run: |
-          git remote set-url origin https://github.com/dalibendhiab10/R8-carav-backup.git
-          git push --mirror
-        env:
-          GITHUB_TOKEN: ${{ secrets.BACKUP_REPO_PAT }}
+          git push --mirror backup
