--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,29 +9,23 @@ jobs:
   sync:
     runs-on: ubuntu-latest
     steps:
-      # 1. Check out your main repository (R8-IEEE/R8-carav)
-      - name: Checkout main repository
+      - name: Checkout repository
         uses: actions/checkout@v2
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          # Fetch entire history to avoid missing objects
+          fetch-depth: 0
 
-      # 2. Set up Git configuration
       - name: Set up Git configuration
         run: |
           git config user.name "dalibendhiab10"
           git config user.email "itsdalibendhiab10@gmail.com"
 
-      # 3. Add the backup remote using your PAT for authentication
-      - name: Add backup remote with authentication
+      - name: Add backup remote
         run: |
-          # Remove any existing remote named "backup" (ignore errors if it doesn't exist)
-          git remote remove backup || true
-          # Add backup remote; the PAT is embedded in the URL for authentication
-          git remote add backup https://dalibendhiab10:${{ secrets.BACKUP_REPO_PAT }}@github.com/dalibendhiab10/R8-carav-backup.git
-          echo "Current remotes:"
-          git remote -v
+          # Add backup remote with authentication using PAT
+          git remote add backup https://x-access-token:${{ secrets.BACKUP_REPO_PAT }}@github.com/dalibendhiab10/R8-carav-backup.git
 
-      # 4. Push all changes (mirror) to the backup repository
       - name: Push changes to backup repository
         run: |
-          git push --mirror backup
+          # Mirror all references to the backup repository
+          git push backup --mirror
